Fixed alignment

--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -1,4 +1,8 @@
 .productmodal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   &__title {
     font-size: 30px;
   }
